# DataStructureAlgorithmsGame

./: README.md  app.json  config.js
backserviceAPI/: .cursorrules  CMakeLists.txt  README.md  api-compatibility-check.ps1  api-compatibility-check.sh  api-examples.md  api-structure.md  api-testing-guide.md  config.js  test_api.ps1  test_api.sh  test_binarytree_api.ps1  test_interaction_api.ps1  test_interaction_api.sh  test_reset_apis.ps1  test_reset_apis.sh
backserviceAPI/.cursor/rules/: cursorrules.mdc
backserviceAPI/src/: server.cpp
backserviceAPI/src/server/: achievement_routes.cpp  achievement_routes.h  base64.cpp  base64.h  database.cpp  database.h  dp_routes.cpp  dp_routes.h  game_animation_routes.cpp  game_animation_routes.h  game_logic.cpp  game_logic.h  game_routes.cpp  game_routes.h  graph_routes.cpp  graph_routes.h  greedy_routes.cpp  greedy_routes.h  jwt_utils.cpp  jwt_utils.h  main.cpp  maze_routes.cpp  maze_routes.h  response_builder.h  user_routes.cpp  user_routes.h
backserviceAPI/src/server/animation/: animation_manager.cpp  animation_manager.h  animation_routes.cpp  animation_routes.h  game_interaction_handler.cpp  game_interaction_handler.h
backserviceAPI/src/server/animation/common/: animation_manager.cpp  animation_manager.h  animation_session.cpp  animation_session.h  game_interaction_handler.cpp  game_interaction_handler.h  response_builder.h
backserviceAPI/src/server/animation/implementations/dp/: dp_animations.cpp  dp_animations.h
backserviceAPI/src/server/animation/implementations/greedy/: greedy_animations.cpp  greedy_animations.h
backserviceAPI/src/server/animation/implementations/maze/: maze_animations.cpp  maze_animations.h
backserviceAPI/src/server/animation/implementations/search/: search_animations.cpp  search_animations.h
backserviceAPI/src/server/animation/implementations/sorting/: sorting_animations.cpp  sorting_animations.h
backserviceAPI/src/server/animation/routes/: animation_routes.cpp  animation_routes.h  dp_routes.cpp  graph_routes.cpp  greedy_routes.cpp  maze_routes.cpp  search_routes.cpp  sorting_routes.cpp
miniprogram/: .cursorrules  README.md  api-compatibility-check.sh  app.json  config.js  project.config.json  project.private.config.json  prototype.html
miniprogram/.cursor/rules/: cursorrules2.mdc
miniprogram/src/: app.json
miniprogram/src/components/binary-tree-game/: binary-tree-game.js  binary-tree-game.wxml  binary-tree-game.wxss
miniprogram/src/components/dp-game/: dp-game.js  dp-game.wxml  dp-game.wxss
miniprogram/src/components/game-card/: game-card.js  game-card.wxml  game-card.wxss
miniprogram/src/components/graph-game/: graph-game.js  (+2 more)
miniprogram/src/services/: api.js
miniprogram/src/utils/: request.js
src/pages/index/: index.js  index.wxml  index.wxss
(+99 files in other folders)
